# b1gMailServer

./: .gitignore  README.md  build.sh
.github/workflows/: build.yml
docker/: Dockerfile
src/: CMakeLists.txt  MARIADB_LICENSE  OPENSSL_LICENSE  bms-sendmail.conf  build.h.in  build_pre.c  io.cpp  main.cpp  make_win32.bat  resource.h  resource.rc
src/BMSManager/: BMSManager.sln
src/BMSManager/BMSManager/: BMSConfig.cs  BMSManager.csproj  BMSManager.exe.manifest  BMSServiceController.cs  FormAbout.Designer.cs  FormAbout.cs  FormAbout.resx  FormMain.Designer.cs  FormMain.cs  FormMain.resx  FormPrefs.Designer.cs  FormPrefs.cs  FormPrefs.resx  FormService.Designer.cs  FormService.cs  FormService.resx  Program.cs
src/BMSManager/BMSManager/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/CMake/Modules/: FindPCRE.cmake  Finddialog.cmake  Findmariadbclient.cmake
src/core/: blobstorage.cpp  blobstorage.h  config.cpp  config.h  core.h  dns.cpp  dns.h  exception.cpp  exception.h  md5.c  mysql.h  mysql_db.cpp  mysql_result.cpp  process.cpp  process.h  servicesession.cpp  servicesession.h  socket.cpp  socket.h  sqlite.cpp  sqlite.h  threadpool.cpp  threadpool.h  tls_dh.cpp  tls_dh.h  utils.cpp  utils.h  win_compat.cpp
src/http/: http.cpp  http.h
src/imap/: auth.cpp  imap.cpp  imap.h  imaphelper.cpp  imaphelper.h  mail.cpp  mail.h  mailparser.cpp  mailparser.h  nonauth.cpp  pattern.cpp  selected.cpp  tls.cpp
src/inetserver/: inetserver.h  main.cpp  resource.h  resource.rc
src/init/: bms-queue  de.b1g.b1gmailserver.queue.plist
src/linux-setup-v2/: CMakeLists.txt  HTTPServer.cpp  HTTPServer.h  Language.cpp  Language.h  SetupServer.cpp  SetupServer.h  SetupServer_install.cpp  Template.cpp  Template.h  UI.cpp  UI.h  Utils.cpp  Utils.h  main.cpp  make.sh  md5.h  mysql.h  mysql_db.cpp  mysql_result.cpp  rescc.php  resdata.h  run-setup
src/linux-setup-v2/res/: common.js  de.lang  en.lang  error.html  index.html  step0.html  step1.html  step3.html  step4.html  step5.html  step6.html  step7.html  step8.html  style.css
src/makeself-2.1.4/: makeself-2.1.4.run  makeself.sh
src/msgqueue/: apnsdispatcher.cpp  apnsdispatcher.h  bounce.cpp  control.cpp  control.h  deliveryrules.cpp  deliveryrules.h  enqueue.cpp  inboundprocess.cpp  inboundprocess.h  inboundprocesspool.cpp  inboundprocesspool.h  msgqueue.cpp  msgqueue.h  msgqueue_inbound.cpp  msgqueue_outbound.cpp  msgqueue_rule.cpp  msgqueue_threadpool.cpp  msgqueue_threadpool.h  smtpsession.cpp  smtpsession.h  smtpsessionpool.cpp  smtpsessionpool.h
src/msgqueue-supervise/: CMakeLists.txt  main.cpp  main.h
src/plugin/: plugin.cpp  plugin.h  pluginmgr.cpp  pluginmgr.h
src/pluginsdk/: CMakeLists.txt  bmsplugin.h  cliqueuemgr.cpp  signature.cpp  tccme.cpp  testplugin.cpp
src/pop3/: pop3.cpp  pop3.h
src/sendmail/: CMakeLists.txt  config.cpp  config.h  context.cpp  context.h  sendmail.cpp  smtp.cpp  smtp.h  socket.cpp  socket.h  utils.cpp  utils.h
src/smtp/: milter.cpp  milter.h  smtp.cpp  smtp.h  smtp_auth.cpp  smtp_data.cpp  smtp_peer.cpp  spf.cpp  spf.h
src/win-pthread/: pthread.cpp  pthread.h
src/win-setup/: DotNetChecker.nsh  setup.nsi  setup_x64.nsi  setup_x86.nsi  vcredist.nsh
